--- a/src/components/new-album/new-album.css
+++ b/src/components/new-album/new-album.css
@@ -21,7 +21,7 @@
   color: white;
   background-color: black;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   justify-content: center;
 }
 
