--- a/src/components/new-album/new-album.css
+++ b/src/components/new-album/new-album.css
@@ -21,8 +21,9 @@
   color: white;
   background-color: black;
   display: flex;
-  /* flex-direction: column; */
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
 }
 
 /* 4th way */
