feature: add responsive header behaviour

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,7 +1,4 @@
 .header {
-  --header-text-color: #1aff00;
-  display: flex;
-  gap: 20px;
   background-color: black;
   height: 100px;
   align-items: center;
@@ -9,13 +6,87 @@
   position: fixed;
   top: 0;
   width: 100%;
+  display: flex;
+}
+
+nav {
+  width: 100%;
+  display: flex;
+  flex: 1;
+  justify-content: end;
+  padding-right: 2rem;
+}
+
+nav ul {
+  display: flex;
+  list-style: none;
+  padding-inline: 2rem 0;
+  width: 100%;
+  max-width: 768px;
 }
 .menu-logo {
   width: 200px;
   height: 100px;
-  color: var(--header-text-color);
+  color: var(--primary-color);
 }
 
 .menu-item {
-  color: var(--header-text-color);
+  color: var(--primary-color);
+  flex: 1;
+  cursor: pointer;
+}
+
+.menu-icon {
+  color: var(--primary-color);
+  cursor: pointer;
+}
+
+.menu-mobile .menu-item {
+  width: 100%;
+  color: black;
+}
+.menu-mobile .menu-item:hover {
+  background-color: #11a4003d;
+}
+
+.menu-mobile {
+  display: none;
+  position: absolute;
+  background-color: #1aff00;
+  top: 16px;
+  border-radius: 4px;
+  flex-direction: column;
+  max-width: 120px;
+  align-items: flex-start;
+  gap: 0.3rem;
+  padding-block: 0.6rem;
+  padding-inline: 0.8rem;
+  right: 35px;
+}
+
+.button-items-box:hover .menu-mobile {
+  display: flex;
+}
+
+nav[data-state="desktop"] {
+  display: none;
+}
+
+nav[data-state="mobile"] {
+  display: inset;
+  position: relative;
+}
+
+/* Responsive breakpoints Reference: https://tailwindcss.com/docs/screens*/
+
+/* Breakpoint for tables to smaller devices like phones */
+@media only screen and (min-width: 640px) {
+  nav[data-state="desktop"] {
+    display: flex;
+    justify-content: flex-start;
+  }
+
+  nav[data-state="mobile"] {
+    display: none;
+  }
 }
