--- a/src/components/tweets/tweets.css
+++ b/src/components/tweets/tweets.css
@@ -1,7 +1,11 @@
 .tweets-img {
-  background-color: blueviolet;
+  margin-top: 120px;
+  background-color: lawngreen;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.tweets-img img {
   height: 600px;
   margin-top: 120px;
-
-  justify-content: center;
 }
